# glint-demo-standalone

./: .gitignore  .gitmodules  README.md  font-weight-fix-attempt.md  input_implementation_todo.md  ios_todo.md  touch_demo.md
demo/: CMakeLists.txt  CMakePresets.json  Info-iOS.plist  LaunchScreen.storyboard  demo_ios_main.mm  demo_mac_main.mm  demo_main.cpp
demo/demos/: window.hpp
demo/demos/pages/: page_backdrop_filters.hpp  page_blend_modes.hpp  page_buttons.hpp  page_checkboxes.hpp  page_colors.hpp  page_cursors.hpp  page_datepicker.hpp  page_filters.hpp  page_fonts.hpp  page_generic.hpp  page_images.hpp  page_inputs.hpp  page_lists.hpp  page_masks.hpp  page_progress.hpp  page_radios.hpp  page_scroll.hpp  page_selects.hpp  page_shaders.hpp  page_stroke.hpp  page_switches.hpp  page_text.hpp  page_textarea.hpp  page_tooltips.hpp  page_touch_demo.hpp  page_transforms.hpp  page_transitions.hpp  page_white_space.hpp
glint_user_code/cpp/shaders/: aurora.hpp  chromatic_aberration.hpp  glint_user_shaders.h  lens_refraction.hpp  liquid_glass.hpp  ripple.hpp  vignette.hpp
glint_user_code/cpp/ui/: glint_switch.hpp
glint_user_code/web/styles/: main.css  third_stylesheet.css
